--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@deck.gl/layers": "^8.8.10",
     "@deck.gl/react": "^8.8.10",
     "@tanstack/react-query": "^4.3.1",
+    "classnames": "^2.3.1",
     "deck.gl": "^8.8.10",
     "geojson2h3": "^1.2.0",
     "h3-js": "^4.0.0",
