--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "@deck.gl/layers": "^8.8.10",
     "@deck.gl/react": "^8.8.10",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/line": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@tanstack/react-query": "^4.3.1",
+    "add": "^2.0.6",
     "classnames": "^2.3.1",
     "deck.gl": "^8.8.10",
     "geojson2h3": "^1.2.0",
@@ -21,7 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.19",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
